refactor: add github repo link

--- a/website/assets/scss/demo.scss
+++ b/website/assets/scss/demo.scss
@@ -28,6 +28,17 @@ a {
     }
 }
 
+.sd-link {
+    text-decoration: none;
+    &:hover {
+        text-decoration: underline;
+    }
+}
+
+.github-logo {
+    margin-right: .25rem;
+}
+
 .sd-btn-copy {
     visibility: hidden;
     opacity: 0;
