chore: update copy to clipboard method for better user experience

--- a/website/assets/scss/demo.scss
+++ b/website/assets/scss/demo.scss
@@ -48,9 +48,23 @@ a {
         right: .25rem;
         top: .25rem;
         padding: .125rem .25rem;
+        border-color: darken($light, 10%);
 
+        &:hover,
         &:focus {
             box-shadow: none;
+            background-color: darken($light, 10%);
+            color: $secondary;
+        }
+
+        &.btn-outline-success {
+            &,
+            &:hover,
+            &:focus {
+                background-color: transparent;
+                border-color: $success;
+                color: $success;
+            }
         }
     }
 
