--- a/src/assets/scss/simpledropit.scss
+++ b/src/assets/scss/simpledropit.scss
@@ -36,7 +36,7 @@
     }
 }
 
-.sd-label {
+.sd-label-wrapper {
     font-family: inherit;
     font-size: inherit;
 
@@ -45,6 +45,10 @@
         cursor: pointer;
         margin-bottom: 0;
         font-weight: 600;
+
+        &:hover {
+            text-decoration: underline;
+        }
 
         &:hover,
         &:focus {
